# card-game

./: Main.hs  card-game.cabal  default.nix  shell.nix
Game/: Actions.hs  ApiServer.hs  Cards.hs  Css.hs  DataTypes.hs  Display.hs  FreeInterp.hs  Logic.hs  Misc.hs  Shell.hs
cli/: Main.hs
cli/Game/CLI/: Main.hs
client/: Css.hs  Main.hs
images/: sources.txt
images/by-canon-name/: bear  book  brain  clock  flame  fortress  gold-coin  handful-coins  lightning  pray
lib/Game/: ApiServer.hs
server/: Actions.hs  ApiServer.hs  Cards.hs  DataTypes.hs  FreeInterp.hs  Logic.hs  Main.hs
