name:                card-game
version:             0.1.0.0
license-file:        LICENSE
author:              Anders Papitto
maintainer:          anderspapitto@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:
    Game.ApiServer
  build-depends:
  default-language:    Haskell2010

executable card-game-server
  main-is:             Main.hs
  hs-source-dirs:      server
  other-extensions:    RecursiveDo, FlexibleContexts, GeneralizedNewtypeDeriving, TemplateHaskell, RankNTypes, ScopedTypeVariables, PostfixOperators
  build-depends:       HTTP
                     , aeson == 0.8.*
                     , base >=4.8 && <4.9
                     , bytestring >= 0.10.6.0
                     , clay >= 0.10
                     , containers >=0.5 && <0.6
                     , either >= 4.3
                     , free >=4.12 && <4.13
                     , lens >=4.12 && <4.13
                     , mtl >=2.2 && <2.3
                     , random >=1.1 && <1.2
                     , servant >= 0.4
                     , servant-server >= 0.4 && <0.5
                     , text >= 1.2
                     , time >= 1.5 && <1.6
                     , transformers >=0.4 && <0.5
                     , wai >= 3.0 && <3.1
                     , warp >= 3.1 && <3.2
                     , card-game
  default-language:    Haskell2010

executable card-game-client
  main-is:             Main.hs
  hs-source-dirs:      client
  build-depends:       aeson == 0.8.*
                     , base >=4.8 && <4.9
                     , clay >= 0.10
                     , containers >=0.5 && <0.6
                     , either >= 4.3
                     , free >=4.12 && <4.13
                     , lens >=4.12 && <4.13
                     , mtl >=2.2 && <2.3
                     , reflex == 0.3.*
                     , reflex-dom == 0.2.*
                     , text >= 1.2
                     , transformers >=0.4 && <0.5
                     , card-game
  default-language:    Haskell2010
 -- see https://stackoverflow.com/questions/12305970/how-to-make-a-haskell-cabal-project-with-libraryexecutables-that-still-run-with