name:                card-game
version:             0.1.0.0
license-file:        LICENSE
author:              Anders Papitto
maintainer:          anderspapitto@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10


 -- see https://stackoverflow.com/questions/12305970/how-to-make-a-haskell-cabal-project-with-libraryexecutables-that-still-run-with

library
  hs-source-dirs:      lib
  build-depends:       aeson >=0.8 && <0.9
                     , base >=4.8 && <4.9
                     , clay >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , either >=4.4 && <4.5
                     , free >=4.12 && <4.13
                     , lens >=4.12 && <4.13
                     , mtl >=2.2 && <2.3
                     , random >=1.1 && <1.2
                     , reflex >=0.3 && <0.4
                     , reflex-dom >=0.2 && <0.3
                     , servant >=0.4 && <0.5
                     , servant-client >=0.4 && <0.5
                     , servant-server >=0.4 && <0.5
                     , text >=1.2 && <1.3
                     , transformers >=0.4 && <0.5
                     , wai >=3.0 && <3.1
                     , warp >=3.1 && <3.2
  exposed-modules:
                  Game.DataTypes
                  Game.Cards
                  Game.ApiServer
                  Game.Actions
                  Game.Logic
  default-language:    Haskell2010

executable card-game-cli
  main-is:             Main.hs
  hs-source-dirs:      cli
  build-depends:       aeson >=0.8 && <0.9
                     , base >=4.8 && <4.9
                     , clay >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , either >=4.4 && <4.5
                     , free >=4.12 && <4.13
                     , lens >=4.12 && <4.13
                     , mtl >=2.2 && <2.3
                     , random >=1.1 && <1.2
                     , reflex >=0.3 && <0.4
                     , reflex-dom >=0.2 && <0.3
                     , servant >=0.4 && <0.5
                     , servant-client >=0.4 && <0.5
                     , servant-server >=0.4 && <0.5
                     , text >=1.2 && <1.3
                     , transformers >=0.4 && <0.5
                     , wai >=3.0 && <3.1
                     , warp >=3.1 && <3.2
                     , card-game
  default-language:    Haskell2010

executable card-game-server
  main-is:             Main.hs
  hs-source-dirs:      server
  build-depends:       aeson >=0.8 && <0.9
                     , base >=4.8 && <4.9
                     , clay >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , either >=4.4 && <4.5
                     , free >=4.12 && <4.13
                     , lens >=4.12 && <4.13
                     , mtl >=2.2 && <2.3
                     , random >=1.1 && <1.2
                     , reflex >=0.3 && <0.4
                     , reflex-dom >=0.2 && <0.3
                     , servant >=0.4 && <0.5
                     , servant-client >=0.4 && <0.5
                     , servant-server >=0.4 && <0.5
                     , text >=1.2 && <1.3
                     , transformers >=0.4 && <0.5
                     , wai >=3.0 && <3.1
                     , warp >=3.1 && <3.2
                     , card-game
  default-language:    Haskell2010

executable card-game-client
  main-is:             Main.hs
  hs-source-dirs:      client
  build-depends:       aeson >=0.8 && <0.9
                     , base >=4.8 && <4.9
                     , clay >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , either >=4.4 && <4.5
                     , free >=4.12 && <4.13
                     , lens >=4.12 && <4.13
                     , mtl >=2.2 && <2.3
                     , random >=1.1 && <1.2
                     , reflex >=0.3 && <0.4
                     , reflex-dom >=0.2 && <0.3
                     , servant >=0.4 && <0.5
                     , servant-client >=0.4 && <0.5
                     , servant-server >=0.4 && <0.5
                     , text >=1.2 && <1.3
                     , transformers >=0.4 && <0.5
                     , wai >=3.0 && <3.1
                     , warp >=3.1 && <3.2
                     , card-game
  default-language:    Haskell2010
